# ash-code

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
ashpy/: pyproject.toml
ashpy/src/ashpy/: __init__.py  __main__.py  _codegen.py  server.py
ashpy/src/ashpy/_generated/: __init__.py  ash_pb2.py  ash_pb2_grpc.py
ashpy/src/ashpy/api/: __init__.py  app.py  query_client.py  routes_commands.py  routes_skills.py  schemas.py
ashpy/src/ashpy/commands/: __init__.py  loader.py  registry.py  schema.py  watcher.py
ashpy/src/ashpy/middleware/: __init__.py  base.py  bash_guard_middleware.py  loader.py  logging_middleware.py
ashpy/src/ashpy/providers/: __init__.py  anthropic_p.py  base.py  loader.py  ollama_p.py  openai_p.py  vllm_p.py
ashpy/src/ashpy/skills/: __init__.py  loader.py  registry.py  schema.py  watcher.py
ashpy/tests/: test_commands.py  test_commands_grpc.py  test_fastapi.py  test_fastapi_commands.py  test_fastapi_commands_run.py  test_fastapi_skills.py  test_grpc.py  test_harness_server.py  test_middleware.py  test_providers.py  test_skills.py  test_skills_grpc.py  test_smoke.py
commands/: review.toml  summarize.toml  test.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/storage/: memory.rs  mod.rs  postgres.rs
crates/ipc/: Cargo.toml  build.rs
crates/ipc/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  backend.rs  event.rs  lib.rs  ui.rs
docker/: Dockerfile  entrypoint.sh  supervisord.conf
docs/: api_guide.md  commands.md  comparison_api_structure.md  comparison_grpcio_grpcaio.md  concept.md  extensibility.md  harness_onstreamdelta.md  persistence.md  remain_task.md  role_proto.md  skills.md  tui.md
docs/task/: M0_TASK_REPORT.md  M1_TASK_REPORT.md  M2_TASK_REPORT.md  M3_TASK_REPORT.md  M4_TASK_REPORT.md  M5_TASK_REPORT.md  M6_TASK_REPORT.md  M7_TASK_REPORT.md  M8_TASK_REPORT.md  M9_1_TASK_REPORT.md  M9_2_TASK_REPORT.md  M9_3_TASK_REPORT.md
proto/: ash.proto
samples/: README.md
samples/commands/: git-summary.toml  healthcheck.toml
samples/middleware/: token_budget_middleware.py
samples/skills/explain-error/: SKILL.md
scripts/: e2e-smoke.sh  perf-smoke.py
skills/review-diff/: SKILL.md
skills/summarize-file/: SKILL.md
