[package]
name = "ash-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ash-core.workspace = true
ash-ipc.workspace = true
ash-query.workspace = true
ash-tools.workspace = true
ash-bus.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-stream.workspace = true
