[package]
name = "ash-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
