[package]
name = "ash-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ash-core.workspace = true
ash-ipc.workspace = true
ash-query.workspace = true
ash-tools.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
async-trait.workspace = true
tonic.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
uuid = { workspace = true }
